# paperbot

./: .env.example  .gitignore  README.md  feeds.yaml  feeds.yaml.example  pyproject.toml  requirements.txt  sample.html  sample.py  test_semantic_map.py
.metadata.example/: email.yaml  feeds.yaml  llm_profiles.yaml
paperbot/: __init__.py  __main__.py  cli.py  config.py  console.py  gui.py
paperbot/data/: llm_models.yaml
paperbot/database/: __init__.py  repository.py
paperbot/gui/: app.py  helpers.py  state.py
paperbot/gui/routers/: __init__.py  actions.py  common.py  papers.py  semantic.py
paperbot/gui/templates/: index.html  preferences.html
paperbot/gui/templates/partials/: detail.html  detail_ai_insight.html  detail_enrich.html  fetch_status.html  paper_list.html  paper_list_cards.html  stats.html
paperbot/models/: __init__.py  paper.py
paperbot/services/: __init__.py  crossref_service.py  export_service.py  feed_service.py  openalex_service.py  ranking_service.py  semantic_map_service.py  zotero_service.py
paperbot/utils/: __init__.py  text.py
